Fix menu overflow issue

--- a/app/assets/styles/global/_pages.scss
+++ b/app/assets/styles/global/_pages.scss
@@ -11,6 +11,7 @@ html {
 
 .page {
   background: #fff;
+  overflow-x: hidden;
 }
 
 /* Header
